Tue Sep  5 06:47:22 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_to_s): variable declaration after an execution
	  statement.

Tue Sep  5 05:49:41 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (path_check_0): check if sticky bit is set on parent
	  directories for executable path.  fixed: [ruby-dev:29415]

Tue Sep  5 05:03:46 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_plus): addition in Fixnum will never overflow
	  long.  a patch from Ondrej Bilka <neleai at seznam.cz>.
	  [ruby-core:08794]

	* numeric.c (fix_minus): ditto.

	* bignum.c (rb_big_pow): eagerly truncate resulting bignum.
	  [ruby-core:08794]

Mon Sep  4 23:15:34 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_to_s): make it conform to RFC2822 date format.
	  [ruby-dev:29467]

Mon Sep  4 21:43:57 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dbm/extconf.rb: create makefile according to the result of check
	  for dbm header.  fixed: [ruby-dev:29445]

Mon Sep  4 21:39:42 2006  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/format.rb: updated based on date2 3.9.

Mon Sep  4 21:14:20 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_strftime): include nul character.  fixed: [ruby-dev:29422]

Mon Sep  4 16:39:11 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::out): specify -x option for nkf.

	* lib/cgi.rb (CGI::out): should not convert utf-8 implicitly using
	  NKF.  it is too Japanese centric.

Mon Sep  4 14:23:10 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dbm/extconf.rb (db_check): remove debug print.

Mon Sep  4 06:46:08 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (rb_id2sym): intern if id is attrset_id.
	  [ruby-dev:29420] [ruby-dev:29447]

Mon Sep  4 01:25:16 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_local_variables): list symbols.

	* struct.c (rb_struct_s_members_m): ditto.

	* variable.c (ivar_i): ditto.
